# zwirnzi

./: .gitignore  README.md  cabal.project.local  zwirnzi-config.yaml  zwirnzi.cabal
.github/workflows/: pack-linux.yml  pack-mac.yml  pack-windows.yml
app/: Main.hs
app/CI/: Backend.hs  Config.hs  Documentation.hs  Listener.hs  Setup.hs
