cabal-version:      3.0
name:               zwirnzi
version:            0.1.0.1
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    README.md


executable zwirnzi
    main-is:          Main.hs
    other-modules:    CI.Backend
                      CI.Setup
                      CI.Config
                      CI.Documentation
                      CI.Listener
    build-depends:    base >= 4.17 && < 4.20,
                      haskeline,
                      text >= 2.1.1 && < 2.2,
                      mtl >= 2.3.1 && < 2.4,
                      file-embed,
                      file-io,
                      containers >= 0.6.8 && < 0.7,
                      bytestring >= 0.12.1 && < 0.13,
                      tidal-link >= 1.0.4,
                      hosc >= 0.21.1 && < 0.22,
                      network >= 3.2.7 && < 3.3,
                      exceptions >= 0.10.9 && < 0.11,
                      filepath,
                      directory,
                      conferer,
                      conferer-yaml,
                      zwirn-core >= 0.1.1 && < 0.2,
                      zwirn >= 0.1.0.1 && < 0.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
